<resources>
    <string name="app_name">Exchange</string>
    <string name="title_calculate">Currency Converter</string>
    <string name="title_latest">Exchange Rate</string>
    <string name="title_settings">Settings</string>
    <string name="base_currency">Base Currency</string>
    <string name="add_currency">Add Currency</string>
    <string name="select_base_currency">Select Base Currency</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="select_currency">Select Currency</string>
</resources>
