<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_latest">

    <fragment
        android:id="@+id/navigation_latest"
        android:name="com.kasim.exchangeandroid.ui.latest.LatestFragment"
        android:label="@string/title_latest"
        tools:layout="@layout/fragment_latest" />

    <fragment
        android:id="@+id/navigation_calculate"
        android:name="com.kasim.exchangeandroid.ui.calculate.CalculateFragment"
        android:label="@string/title_calculate"
        tools:layout="@layout/fragment_calculate" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.kasim.exchangeandroid.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>